# rag4code

./: .gitignore  README.md  docker-compose.hsm.yml  hsm.yaml  main.py  pyproject.toml
.serena/: project.yml
docs/: architecture.md
docs/adr/: 001-diagrams-storage-and-rendering.md  002-plugin-system-entrypoints.md
docs/brain_storm/: long_talk.md
docs/contribution/: plugin_development_guide.md
docs/diagrams/architecture/: component-diagram.puml
docs/idea/: HyperGraph_vision.md  agent_feedback_community_summaries.md  integrated_knowledge_graph_schema.md
docs/research/: Анализ интеграции графа знаний с Git.md  Архитектура MCP-сервера для GraphRAG_2.md  Выбор модели эмбеддингов для кода.md  Графы знаний для агента.md
docs/theory/: entry_points_mechanism.md  factory_pattern_registration.md
docs/tools/: plantuml-renderer-guide.md
hsm-registry/container_groups/: embedding-service.yaml  vector-db-service.yaml
hsm-registry/containers/: ollama.yaml  qdrant.yaml
hsm-registry/package_groups/: chunker.yaml  embedder.yaml  vector-db.yaml
hsm-registry/services/: code-rag.yaml  obsidian-assistant.yaml
src/rag4code/: __init__.py
src/rag4code/core/: engine.py  factory.py
src/rag4code/interfaces/: embedder.py  vector_db.py
